lista 3 statystyki i readme